resourcelimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-demo
  namespace: cpu-example
  labels:
    name: cpu-demo
spec:
  containers:
  - name: frontend
    image: nginx:alpine
    resources:
      limits:
        cpu: "1"
        memory: "1"
      requests:
        cpu: "0.5"
        memory: "0.5"
    ports:
      - containerPort: 8088

---

apiVersion: v1
kind: Pod
metadata:
  name: qos-demo
  namespace: qos-demo
  labels:
    name: cpu-demo
spec:
  containers:
  - name: qos-demo-ctr
    image: nginx:alpine
    resources:
      limits:
        memory: "200Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
    ports:
      - containerPort: 8888
