service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-mongodb
  namespace: ykoon
spec:
  type: ExternalName
  externalName: mymongodb.documents.azure.com
